# back-end-traffic-simulation-tcc

./: .gitignore
fast_api_tcc/: .coverage  GeneticAlgorithm.py  alembic.ini  app.py  pyproject.toml  schemas.py
fast_api_tcc/Migrations/: env.py
fast_api_tcc/Migrations/versions/: df74b9f22284_create_traffic_light_table.py
fast_api_tcc/SqlAlchemy/: database.py  log_test.tsv  loggings.py  models.py
fast_api_tcc/fast_api_tcc/: app.py  models.py  schemas.py  settings.py
fast_api_tcc/fast_api_tcc/Alg_genetic/: GeneticAlgorithm.py  init_gen.py
fast_api_tcc/fast_api_tcc/Logs/: log.txt  loggings.py
fast_api_tcc/fast_api_tcc/SqlAlchemy/: database.py  models.py
fast_api_tcc/migrations/: env.py
fast_api_tcc/migrations/versions/: df74b9f22284_create_traffic_light_table.py
fast_api_tcc/tests/: conftest.py  test_alg_gen.py  test_app.py  test_db.py
